[package]
name = "neat-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
tokio = {version="1.35.1", features =["full"]}
warp = "0.3.6"
